--- a/点滴生活/miniprogram/pages/mycenter/release.wxss
+++ b/点滴生活/miniprogram/pages/mycenter/release.wxss
@@ -39,11 +39,73 @@
   left:0rpx;
 }
 .content{
-  height: 340rpx;
-  width: 600rpx;
+  line-height: 20px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 100);
+  color: rgba(16, 16, 16, 100);
+  min-height: 400rpx;
+  width: 700rpx;
   position: relative;
-  top:280rpx;
-  margin-top: 50rpx;
-  margin-left: 70rpx;
+  top:250rpx;
+  margin-left: 25rpx;
+  z-index: 1;
   border:1px solid #CCC;
+}
+.modification{
+  width: 70rpx;
+  height: 70rpx;
+  top:300rpx;
+  z-index: 2;
+  position: relative;
+  
+}
+.beer{
+  position: absolute;
+  width: 50rpx;
+  height: 50rpx;
+  left: 80rpx;
+  top: 60rpx;
+  float: left;
+  /* border:1px solid #CCC; */
+}
+.time{
+  /* border:1px solid #CCC; */
+  position: absolute;
+  height: 40rpx;
+  width: 254rpx;
+  top: 60rpx;
+  left: 156rpx;
+  color: #444444 10000%;
+  font-size: 28rpx;
+text-align: left;
+font-family: PingFangSC-bold;
+  float: left;
+}
+.contenttype{
+  /* border:1px solid #CCC; */
+  position: absolute;
+  height: 40rpx;
+  width: 84rpx;
+  top: 42rpx;
+  right:42rpx;
+  color: rgba(242, 118, 103, 100);
+font-size: 28rpx;
+text-align: left;
+font-family: PingFangSC-regular;
+  float: left;
+  
+}
+.contenttext{
+  position: relative;
+  font-size: 28rpx;
+text-align: left; 
+/* /* font-family: PingFangSC-regular; */
+  min-height: 200rpx;
+  width: 500rpx;
+  margin-top: 136rpx;
+  margin-left: 156rpx;
+  padding-bottom: 50rpx;
+   clear:both;
+   color: #444444 10000%;
+   /* overflow:scroll; */
 }
