个人页面能显示微信用户头像昵称

--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
@@ -1,9 +1,9 @@
 
 <view class="all">
   <view class="maintain">
-    <image src="https://pic4.zhimg.com/80/v2-79003af85f0a52e5f16b6568b7980a83_720w.jpg?source=1940ef5c" mode="aspectFill" class="pic"></image>
+    <open-data type="userAvatarUrl" mode="aspectFill" class="pic"></open-data>
     <view class="personal">
-      <view class="name">{{list[0].userName}}</view>
+      <view class="name"><open-data type="userNickName" lang="zh_CN"></open-data></view>
       <view class="nums">
         <view class="nums1">
           <view class="continuationnum">20</view>
