添加跳转到记账界面，账单列表可以根据月份查看

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -50,9 +50,11 @@
     </view>
 
   </view>
-
+  <view class="monthpicker">
+    <select id="select" current="{{listcurrentmonth}}" defaultOption="{{mpdefaultoption}}" options="{{monthoptions}}" key="time_id" text="time_name" bindchange="mpchange"></select>
+  </view>
   <view class="accountlist_zj">
     <accountlist accountlist='{{costaccountlist}}' account-type="0"></accountlist>
   </view>
-
+  <cover-image bindtap="makeaccount"class="makeaccount" src="../../images/makeaccount.png" mode='scaleToFill'></cover-image>
 </view>
