--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxss
@@ -115,6 +115,13 @@
   top: 100rpx;
   left:40rpx;
 }
+.monthpicker{    
+  width: 180rpx;
+  z-index:99;
+  position: absolute;
+  top: 1095rpx;
+  right: 30rpx;
+}
 .accountlist_zj{
   width:700rpx;
   height:840rpx;
@@ -168,4 +175,12 @@
   top: 22rpx;
   left: 50rpx;
   width: 180rpx;
+}
+
+.makeaccount{
+  position: fixed;
+  top:1296rpx;
+  right:32rpx;
+  width:152rpx;
+  height:158rpx;
 }
