--- a/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
+++ b/点滴生活/miniprogram/pages/makeaccount/makeaccount.wxss
@@ -172,32 +172,44 @@
   font-size: 34rpx;
   font-weight: 500;
 }
-.switch{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 80rpx;
-  margin-bottom: 30rpx;
+
+.in_pay_tapbar{
+  border:1px solid #CCC;
+  width: 262rpx;
+  height: 64rpx;
+  border-radius: 60rpx;
+  background-color:  rgba(253, 242, 241, 100);
+  position:absolute;
+  margin-top: 180rpx;
+  margin-bottom: 25rpx;
+  left:30%; 
 }
-.switch1{
-  position: relative;
-  background: linear-gradient(#FDBF9C 75%, #F0887B 100%);
-  font-size: 30rpx;
-  font-weight: 500;
-  width: 100rpx;
-  color:white;
-  padding: 25rpx;
-  border-radius: 48rpx;
-  text-align: center;
+.border1{
+  margin-top: 80rpx;
+  width: 100%;
+  height: 0;
 }
-.switch2{
-  position: relative;
-  background:#FDF2F1 100%;
-  font-size: 30rpx;
-  font-weight: 500;
-  color:gray;
-  text-align: center;
-  width: 100rpx;
-  padding: 25rpx;
-  border-radius: 48rpx;
+.income{
+  font-size:28rpx;
+  color:#909090;
+  pointer-events: none;/*解决文字遮挡点击事件的问题*/
+  position: absolute;
+  left:154rpx;
+  top:10rpx;
+}
+.expend{
+  font-size:28rpx;
+  color:#FFFFFF;
+  pointer-events: none;/*解决文字遮挡点击事件的问题*/
+  position:absolute;
+  left:30rpx;
+  top:10rpx;
+}
+
+.slide{
+  width: 136rpx;
+  height: 64rpx;
+  position: absolute;
+  pointer-events: none;
+  left:0rpx;
 }
