让总计和平均两个值可以根据后端获取的数据动态变化，将下拉列表的响应时间对饼图和折线图的响应区分开来

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -40,12 +40,12 @@
     <view class="statistic">
       <view class="total">
         <view style="font-weight:bold">总计</view>
-        <view class="num">199900</view>
+        <view class="num">{{totalAccount}}</view>
       </view>
       <view class="separete"></view>
       <view class="average">
         <view style="font-weight:bold">平均</view>
-        <viwe class="num">9966600</viwe>
+        <viwe class="num">{{avgAccount}}</viwe>
       </view>
     </view>
 
