图片上传异步改同步向外传值

--- a/点滴生活/miniprogram/components/csk/uploadPic/uploadPic.wxml
+++ b/点滴生活/miniprogram/components/csk/uploadPic/uploadPic.wxml
@@ -1,15 +1,14 @@
 <!--components/csk/uploadPic/uploadPic.wxml-->
 
-<view class="picList">
+<view class="picList" hidden="{{hide}}">
   <block wx:key="picBox" wx:for="{{picBox}}">
       <view class="pic">
           <image class="picItem" src="{{item}}"></image>
       </view>
   </block>
-  <block>
+  <!-- <block>
     <view class="pic" bindtap="addPic" wx:if="{{picBox.length<9}}"></view>
-  </block>
+  </block> -->
 </view>
-<button type="primary" bindtap="uploadPics" >上传图片</button>
 
 
