--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -50,7 +50,7 @@
     </view>
 
   </view>
-  <view class="monthpicker">
+  <view class="monthpicker" style="pointer-events: {{listselect}};display:{{listselectshow}}">
     <select id="select" current="{{listcurrentmonth}}" defaultOption="{{mpdefaultoption}}" options="{{monthoptions}}" key="time_id" text="time_name" bindchange="mpchange"></select>
   </view>
   <view class="accountlist_zj">
