--- a/点滴生活/miniprogram/pages/mycenter/norelease.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/norelease.wxml
@@ -8,9 +8,9 @@
     <block wx:for='{{chosenList}}' wx:key='id' wx:for-item="item">
     <image src="../../images/modification.png" class="modification"></image>
     <view class="content">
-        <image src="../../images/beer.png" class="beer"></image>
+        <image src="../../images/right.png" class="right"></image>
         <view class="time">{{item.time}}</view>
-        <view class="contenttype">{{item.type}}</view>
+        <view class="contenttype">已审核</view>
         <view class="contenttext">{{item.content}}</view>
     </view>
 </block>
