--- a/点滴生活/miniprogram/pages/mycenter/norelease.wxss
+++ b/点滴生活/miniprogram/pages/mycenter/norelease.wxss
@@ -1,4 +1,4 @@
-/* miniprogram/pages/mycenter/release.wxss */
+/* miniprogram/pages/mycenter/norelease.wxss *//* miniprogram/pages/mycenter/release.wxss */
 /* .main{
   position: relative;
   width:  100%;
@@ -59,12 +59,12 @@
   position: relative;
   
 }
-.beer{
+.right{
   position: absolute;
-  width: 50rpx;
-  height: 50rpx;
-  left: 80rpx;
-  top: 60rpx;
+  width: 60rpx;
+  height: 60rpx;
+  left: 70rpx;
+  top: 45rpx;
   float: left;
   /* border:1px solid #CCC; */
 }
@@ -95,4 +95,17 @@ text-align: left;
    clear:both;
    color: rgba(68, 68, 68, 100);
    /* overflow:scroll; */
+}
+.contenttype{
+  /* border:1px solid #CCC; */
+  position: absolute;
+  height: 40rpx;
+  width: 88rpx;
+  top: 40rpx;
+  right: 42rpx;
+  font-size: 28rpx;
+  color: rgba(242, 118, 103, 100);
+text-align: left;
+font-family: PingFangSC-regular;
+  float: left;
 }
