--- a/点滴生活/miniprogram/pages/keepthing/notesdetails.wxss
+++ b/点滴生活/miniprogram/pages/keepthing/notesdetails.wxss
@@ -1,8 +1,15 @@
 /* pages/keepthing/notesdetails.wxss */
 
-.content{
-  margin-top: 300rpx;
+.main{
+  margin-top: 350rpx;
   margin-left: 35rpx;
+  width: 100%;
+  height: 100%;
+}
+.content{
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 .notes-titlt{
   font-size: larger;
@@ -23,4 +30,11 @@
   top: 35rpx;
   font-size: 35rpx;
   color: #959595;
+}
+.edit{
+  position: relative;
+  width: 80rpx;
+  height: 80rpx;
+  top: 900rpx;
+  left: 550rpx;
 }
