--- a/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
+++ b/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
@@ -2,9 +2,9 @@
 <view class="main">
 
     <view class="content">
-        <input class="notes-titlt" type="text" placeholder="请输入标题" maxlength="25" bindtap="inputTitle"/>
+        <input class="notes-titlt" type="text" placeholder="请输入标题" maxlength="25" bindtap="inputTitle" bindinput="titlechange" data-id="title"/>
         <view class="line"></view>
-        <textarea class="notes-content" placeholder="记录下今天的日常吧……" bindfocus="inputFocus" bindblur="inputBlur" maxlength="-1" auto-height="true" show-confirm-bar="{{false}}"></textarea>
+        <textarea data-id="content" class="notes-content" placeholder="记录下今天的日常吧……" bindfocus="inputFocus"  bindinput="contentchange" bindblur="inputBlur" maxlength="-1" auto-height="true" show-confirm-bar="{{false}}"></textarea>
     </view>
 
     <view class="select_img">
@@ -14,7 +14,7 @@
     <view class="bottom_menu" style="bottom:{{inputBottom}}rpx">
         <image src="/images/image.png" class="img" id="picture" bindtap="selectImg"></image>
         <image src="/images/moodmenu.png" class="img" id="mood" bindtap="selectMood"></image>  
-        <button class="bt_submit" bindtap="toNoteslist" mode="scaleToFill">发布</button>
+        <button  class="bt_submit" bindtap="toNoteslist">发布</button>
     </view>
 
     <!--flag==true显示组件-->
