--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -16,17 +16,17 @@
   <view class="datatableblock">
 
     <view class="select_wrap" style="display:{{yearselect}}">
-      <select id="select" defaultOption="{{yeardefaultoption}}" options="{{yearoptions}}" key="time_id" text="time_name"
+      <select id="select" current="{{yearcurrent}}" defaultOption="{{yeardefaultoption}}" options="{{yearoptions}}" key="time_id" text="time_name"
         bindchange="change"></select>
     </view>
 
     <view class="select_wrap" style="display:{{monthselect}}">
-      <select id="select" defaultOption="{{monthdefaultoption}}" options="{{monthoptions}}" key="time_id"
+      <select id="select" current="{{monthcurrent}}" defaultOption="{{monthdefaultoption}}" options="{{monthoptions}}" key="time_id"
         text="time_name" bindchange="change"></select>
     </view>
 
     <view class="select_wrap" style="display:{{weekselect}}">
-      <select id="select" defaultOption="{{weekdefaultoption}}" options="{{weekoptions}}" key="time_id" text="time_name"
+      <select id="select" current="{{weekcurrent}}" defaultOption="{{weekdefaultoption}}" options="{{weekoptions}}" key="time_id" text="time_name"
         bindchange="change"></select>
     </view>
 
