在社区界面添加提醒文字。等待我们下次开发成功

--- a/点滴生活/miniprogram/pages/community/community.wxml
+++ b/点滴生活/miniprogram/pages/community/community.wxml
@@ -1,2 +1,4 @@
 // 'navbar-data'中navbar是自定义导航栏标题
 <navbar navbar-data='{{nvabarData}}'></navbar>
+
+<view class="word" style="color: #FFC8A1">社区功能正在开发中，敬请期待~</view>
