--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -60,10 +60,10 @@
   <view class="accountlist_zj">
     <accountlist accountlist='{{costaccountlist}}' account-type="0"></accountlist>
   </view>
-  <movable-area class="movearea" style="height:{{moveareaheight}}rpx">
-    <movable-view class="moveview" >
+  <!--movable-area class="movearea" style="height:{{moveareaheight}}rpx"-->
+    <view class="moveview" >
       <cover-image bindtap="makeaccount" class="makeaccount" src="../../images/makeaccount.png" mode='scaleToFill'>
       </cover-image>
-    </movable-view>
-  </movable-area>
+    </view>
+  <!--/movable-area-->
 </view>
