--- a/点滴生活/miniprogram/pages/keepthing/notesdetails.wxml
+++ b/点滴生活/miniprogram/pages/keepthing/notesdetails.wxml
@@ -7,8 +7,15 @@
     <text class="notes-titlt">{{note_title}}</text>
     <view class="line"></view>
     <text class="notes-content">{{note_content}}</text>
+    <view class="picList" style="margin-top:220rpx">
+        <view wx:key="pic" wx:for="{{pic}}">
+            <view class="pic">
+                 <image class="picItem" src="{{item}}" bindtap="preview" data-src="{{item}}"></image>
+            </view>
+        </view>
     </view>
-
+    </view>
+    
     <image src="/images/edit.png" class="edit" mode="aspectFit"></image>
 </view>
     
