--- a/点滴生活/miniprogram/pages/keepthing/notesdetails.wxss
+++ b/点滴生活/miniprogram/pages/keepthing/notesdetails.wxss
@@ -14,7 +14,7 @@
 .notes-titlt{
   font-size: larger;
   padding-left: 2rpx;
-  color: #525252;
+  color: #0c0c0c;
   font-weight: bold;
 }
 .line{
@@ -29,7 +29,7 @@
   padding-left: 2rpx;
   top: 35rpx;
   font-size: 35rpx;
-  color: #959595;
+  color: #0c0c0c;
 }
 .edit{
   position: relative;
