更新EChart 5.1.1; 更新饼图样式; 修复小bug
折线图的拐点的点击效果没有那么明显了

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -37,7 +37,8 @@
     <view class="week" bindtap="weekselect"
       style="border-style:{{weekborder}};background-color:{{weekbackcolor}};color:{{weekcolor}}">周</view>
 
-    <ec-canvas force-use-old-canvas="true" class="datatable" id="mychart-dom" canvas-id="mychart" ec="{{ec}}">
+    <!-- 去掉属性 force-use-old-canvas="true"，使用新版canvas -->
+    <ec-canvas  class="datatable" id="mychart-dom" canvas-id="mychart" ec="{{ec}}">
     </ec-canvas>
 
     <view class="statistic">
