修改总计没有保留2位小数的bug，修复切换为饼图时总计和平均还存在的bug

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -43,13 +43,13 @@
 
     <view class="statistic">
       <view class="total">
-        <view style="font-weight:bold">总计</view>
-        <view class="num">{{totalAccount}}</view>
+        <view wx:if="{{chartchange}}" style="font-weight:bold">总计</view>
+        <view wx:if="{{chartchange}}" class="num">{{totalAccount}}</view>
       </view>
-      <view class="separete"></view>
+      <view wx:if="{{chartchange}}" class="separete"></view>
       <view class="average">
-        <view style="font-weight:bold">平均</view>
-        <viwe class="num">{{avgAccount}}</viwe>
+        <view wx:if="{{chartchange}}" style="font-weight:bold">平均</view>
+        <viwe wx:if="{{chartchange}}" class="num">{{avgAccount}}</viwe>
       </view>
     </view>
 
