先随便搞个能发布的

--- a/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
+++ b/点滴生活/miniprogram/pages/mycenter/mycenter.wxml
@@ -30,21 +30,21 @@
     <input class="quotainput" type="number" bindblur="setLimit" value="{{limit}}"></input>
     <view class="element">元</view>
   </view>
-  <view class="myrelease_notification" bindtap="toRelease" style="border-bottom:white;">
+  <view class="myrelease_notification" bindtap="toRelease" style="border-bottom:white;" style="display:none">
     <image src="../../images/release.png" class="release_notification"></image>
     <view class="release_notificationtext">我的发布</view>
     <image src="../../images/goto.png" class="goto"></image>
   </view>
-  <view class="myrelease_notification" bindtap="toNotification">
+  <view class="myrelease_notification" bindtap="toNotification" style="display:none">
     <image src="../../images/notification.png" class="release_notification"></image>
     <view class="release_notificationtext">我的通知</view>
     <image src="../../images/goto.png" class="goto"></image>
   </view>
-  <view class="myabout" style="border-bottom:white;">
+  <view class="myabout" style="border-bottom:white;" style="display:none">
     <image src="../../images/we.png" class="about"></image>
     <view class="abouttext">关于我们</view>
   </view>
-  <view class="myhelp">
+  <view class="myhelp"style="display:none">
     <image src="../../images/help.png" class="help"></image>
     <view class="helptext">帮助</view>
   </view>
