修改按钮文字居中，发布文本改一个说法

--- a/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
+++ b/点滴生活/miniprogram/pages/keepthing/keepthing.wxml
@@ -14,7 +14,7 @@
     <view class="bottom_menu" style="bottom:{{inputBottom}}rpx">
         <image src="/images/image.png" class="img" id="picture" bindtap="selectImg"></image>
         <image src="/images/moodmenu.png" class="img" id="mood" bindtap="selectMood"></image>
-        <button  class="bt_submit" bindtap="toNoteslist">发布</button>
+        <button  class="bt_submit" bindtap="toNoteslist">保存（仅能自看）</button>
     </view>
 
     <!--flag==true显示组件-->
