--- a/点滴生活/miniprogram/pages/keepthing/keepthing.wxss
+++ b/点滴生活/miniprogram/pages/keepthing/keepthing.wxss
@@ -54,6 +54,9 @@
   color: #ffffff;
   margin-left: 200rpx;
   bottom: 55rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .select_img{
   position: relative;
