修复添加账单的按钮的bug

--- a/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
+++ b/点滴生活/miniprogram/pages/keepaccounts/keepaccounts.wxml
@@ -62,9 +62,10 @@
     <accountlist accountlist='{{costaccountlist}}' account-type="0"></accountlist>
   </view>
   <!--movable-area class="movearea" style="height:{{moveareaheight}}rpx"-->
-    <view class="moveview" >
-      <cover-image bindtap="makeaccount" class="makeaccount" src="../../images/makeaccount.png" mode='scaleToFill'>
-      </cover-image>
-    </view>
   <!--/movable-area-->
+</view>
+
+<view class="moveview" >
+      <image bindtap="makeaccount" class="makeaccount" src="../../images/makeaccount.png" mode='scaleToFill'>
+      </image>
 </view>
